--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,9 +1,6 @@
 
 <app-navbar />
 
-@for (user of users ; track user.id) {
-    <article>
-        <header>{{ user.name }}</header>
-        <p>{{ user.email }}</p>
-    </article>
+@for (u of users ; track u.id) {
+    <app-user-card [user]="u" />
 }
