--- a/src/app/features/user-card/user-card.component.html
+++ b/src/app/features/user-card/user-card.component.html
@@ -1,4 +1,4 @@
 <article>
-    <header>{{ user.name }}</header>
-    <p>{{ user.email }}</p>
+    <header userName>{{ user.name }} </header>
+    <p userEmail>{{ user.email }}</p>
 </article>
