--- a/src/app/features/navbar/navbar.component.html
+++ b/src/app/features/navbar/navbar.component.html
@@ -1,3 +1,4 @@
-<h1>{{ title() }}</h1>
+<h1>{{ title$ | async }}</h1>
 
 <input type="text" placeholder="Rechercher" [formControl]="propSearch">
+<button (click)="changeTitle()">Modifier le titre</button>
