--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,6 +1,8 @@
 
 <app-navbar />
 
-@for (u of users() ; track u.id) {
+<!-- Ajouter formulaire de création ici -->
+
+@for (u of users$ | async ; track u.id) {
     <app-user-card [user]="u" />
 }
