--- a/src/app/features/user-card/user-card.component.html
+++ b/src/app/features/user-card/user-card.component.html
@@ -1,4 +1,5 @@
 <article>
     <header userName>{{ user().name }} </header>
     <p userEmail>{{ user().email }}</p>
+    <button (click)="removeUser()">Supprimer</button>
 </article>
