--- a/src/app/features/navbar/navbar.component.html
+++ b/src/app/features/navbar/navbar.component.html
@@ -5,3 +5,4 @@
 
 <input type="text" placeholder="Rechercher" [formControl]="propSearch">
 <button (click)="changeTitle()">Modifier le titre</button>
+<button routerLink="/login">Se connecter</button>
